--- a/product.html
+++ b/product.html
@@ -32,12 +32,12 @@
     <main>
         <div class="fade-animation">
         <div class="product-details">
-            <div id="product-image" class="product-image">
-            </div>
+            <div id="product-image" class="product-image"></div>
             <div class="product-info">
             <h1 id="product-name"></h1>
             <p id="product-stats"></p>
             <p id="product-description"></p>
+            <div id="product-actions" class="product-actions"></div>    
             </div>
         </div>
         </div>
