autoplay index video

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="video-container">
-        <video autoplay muted loop id="video-bg">
+        <video autoplay playsinline muted loop id="video-bg">
             <source src="images/video.mp4" type="video/mp4">
         </video>
         <div class="overlay">
