--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
     </header>
     <main>
         <div class="fade-animation">
+        <div class="about-container">
         <section class="about-section">
             <div class="about-content">
                 <h2>About Us</h2>
@@ -58,6 +59,7 @@
                 <p>At JDM Cars, our commitment extends beyond providing top-quality products. We are dedicated to fostering a community of passionate enthusiasts who share our love for JDM automobiles. With a focus on customer satisfaction and community engagement, we strive to create an inclusive and welcoming environment where enthusiasts can connect, learn, and celebrate their shared passion for Japanese Domestic Market vehicles</p>
             </div>
         </section>
+        </div>
         </div>
     </main>
     <footer>
