--- a/home.html
+++ b/home.html
@@ -31,6 +31,7 @@
     </header>
     <main>
         <div class="fade-animation">
+        <div class="about-container">
         <section class="intro">
             <div class="intro-content">
                 <h2>Explore our wide range of cars!</h2>
@@ -86,6 +87,7 @@
         </div>
         <div class="dot-container" id="dot-container2"></div>
         </div>
+    </div>
     </main>
 
     <footer>
