--- a/product.html
+++ b/product.html
@@ -31,15 +31,17 @@
     </header>
     <main>
         <div class="fade-animation">
-        <div class="product-details">
-            <div id="product-image" class="product-image"></div>
+            <div class="product-container">
+            <div class="product-details">
+                <div id="product-image" class="product-image"></div>
             <div class="product-info">
-            <h1 id="product-name"></h1>
-            <p id="product-stats"></p>
-            <p id="product-description"></p>
-            <div id="product-actions" class="product-actions"></div>    
+                <h1 id="product-name"></h1>
+                <p id="product-stats"></p>
+                <p id="product-description"></p>
+                <div id="product-actions" class="product-actions"></div>    
             </div>
-        </div>
+            </div>
+            </div>
         </div>
     </main>
     <footer>
