login form js changes and css

--- a/about.html
+++ b/about.html
@@ -40,12 +40,12 @@
         
         <div class="slideshow-container">
             <div class="image-container" id="slideshow1">
-                <img src="images/garage1.jpg" alt="Garage1">
-                <img src="images/garage2.jpg" alt="Garage2">
-                <img src="images/garage3.jpg" alt="Garage3">
-                <img src="images/garage4.jpg" alt="Garage4">
-                <img src="images/garage5.jpg" alt="Garage5">
-                <img src="images/garage6.jpg" alt="Garage6">
+                <img src="images/garage1.jpg" alt="Legends Unite: NSX and Skyline Take Centerstage">
+                <img src="images/garage2.jpg" alt="Under the Knife: Car Stripped for Front Bumper Surgery">
+                <img src="images/garage3.jpg" alt="Classic Meets Modern: White Nissan Skyline and Arcade Nostalgia">
+                <img src="images/garage4.jpg" alt="Unveiling Power: Dive into the Heart of the Honda NSX">
+                <img src="images/garage5.jpg" alt="Masterpiece Resting: Skyline GTR Finds Shelter in the Shop">
+                <img src="images/garage6.jpg" alt="NISMO Nest: Skyline GTR's Trunk Packed with Performance Goodies">
             </div>
             <div class="textbox" id="textbox1"></div>
             <a class="prev" onclick="plusSlides(-1, 'slideshow1')">&#10094;</a>
