--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p>Discover the finest selection of Japanese Domestic Market (JDM) cars. From iconic classics to modern marvels, we've got it all.</p>
             </div>
             <div class="home-button">
-                <a href="home.html" class="btn">?</a>
+                <a href="home.html" class="btn">Enter</a>
             </div>
         </div>
     </div>
