--- a/dashboard.html
+++ b/dashboard.html
@@ -15,6 +15,15 @@
         </div>
     </header>
 <main>
+    <div class="fade-animation">
+        <div class="dashboard-container">
+            <div class="dashboard-content">
+                <h1>Login Successful!</h1>
+                <a href="home.html" class="home-button">Home</a>
+            </div>
+        </div>
+    </div>
+
 </main>
 <footer>
     <div class="footer-overlay"></div>
