--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
                 <h1>Welcome to JDM Cars</h1>
                 <p>Discover the finest selection of Japanese Domestic Market (JDM) cars. From iconic classics to modern marvels, we've got it all.</p>
             </div>
-            <div class="home-button">
-                <a href="home.html" class="btn">Enter</a>
-            </div>
+                <a href="home.html" class="intro-button">Enter</a>
         </div>
     </div>
     <button id="toggle-sound"><i class="fas fa-volume-mute"></i></button>
