--- a/account.html
+++ b/account.html
@@ -100,7 +100,8 @@
         <p>&copy; 2024 JDM Cars. Azhar Rashid.</p>
     </div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aws-sdk/2.1119.0/aws-sdk.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aws-sdk/2.1109.0/aws-sdk.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/amazon-cognito-identity-js/5.0.5/amazon-cognito-identity.min.js"></script>
     <script src="js/login.js"></script>
 </body>
 </html>
