--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <div class="fade-animation">
-        <div class="about-container">
+        <div class="home-container">
         <section class="intro">
             <div class="intro-content">
                 <h2>Explore our wide range of cars!</h2>
