--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
             <i class="fas fa-user icon" id="account-icon" onclick="redirectToAccountPage()"></i>
             <i class="fas fa-shopping-cart icon" id="cart-icon" onclick="redirectToCheckout()"></i>
        </div>
+       <div class="line"></div>
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
