--- a/home.html
+++ b/home.html
@@ -35,6 +35,7 @@
         <section class="home-content">
             <div class="image-container-home">
                 <img src="images/-garage-scaled.avif" alt="Image">
+                <div class="overlay2"></div>
             </div>
             
             <div class="text-container-home">
