--- a/cars.html
+++ b/cars.html
@@ -33,7 +33,15 @@
     <main>
         <div class="fade-animation">
             <div class="body-header">
-            <span class="dropdown-label">Cars</span>
+                <div class="page-numbers">
+                    <ul>
+                        <li><a href="#">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#">4</a></li>
+                        <li><a href="#">5</a></li>
+                    </ul>
+                </div>
             <div class="sort-dropdown">
                 <select id="sort-by">
                     <option value="price-low-to-high">Price: Low to High</option>
