--- a/checkout.html
+++ b/checkout.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <div class="fade-animation">
-        <div class="container">
+        <div class="checkout-container">
             <div class="order-summary">
                 <h2>Order Summary</h2>
                 <div class="order-item-header">
