--- a/home.html
+++ b/home.html
@@ -41,11 +41,14 @@
             <div class="text-container-home">
                 <h2>Explore our wide range of cars!</h2>
                 <p>Get ready to be amazed by our upcoming products. Stay tuned for the latest updates and exclusive previews.</p>
-                <a href="cars.html" class="cars-button">Explore Now</a>
+                <div class="button-container">
+                    <a href="cars.html" class="cars-button">Explore Cars</a>
+                    <a href="#features" class="scroll-button"><i class="fas fa-angle-down"></i> Scroll Down</a>
+                </div>
             </div>
         </section>
 
-        <section class="features">
+        <section id="features" class="features">
             <div class="feature-box">
                 <div>
                     <h3><i class="fas fa-shipping-fast"></i> Express Shipping</h3>
