--- a/home.html
+++ b/home.html
@@ -96,15 +96,11 @@
 
         <div class="home-container">
 
-        <section class="reviews">
-            <div class="review-content">
-                <h2>Reviews</h2>
-            </div>
-        </section>
-
-        <div class="slideshow-container">
-            <div class="image-container" id="slideshow2">
-                <img src="images/Night.jpg" alt="night">
+        <div class="slideshow-container-review">
+            <div class="image-container-review" id="slideshow2">
+                <img src="images/review1.png" alt="review1">
+                <img src="images/review2.png" alt="review2">
+                <img src="images/review3.png" alt="review3">
             </div>
             <a class="prev" onclick="plusSlides(-1, 'slideshow2')">&#10094;</a>
             <a class="next" onclick="plusSlides(1, 'slideshow2')">&#10095;</a>
