--- a/home.html
+++ b/home.html
@@ -95,16 +95,23 @@
 
         <div class="home-container">
 
+        <section class="reviews">
+            <div class="review-content">
+                <h2>Reviews</h2>
+                <p>Be the first to experience our latest additions! Our team is working tirelessly to bring you a range of innovative cars that will elevate your experience. From cutting-edge technology to stylish designs, we have something special in store for you. Keep an eye out for updates as we prepare to unveil these exciting new arrivals.</p>
+            </div>
+        </section>
+
         <div class="slideshow-container-review">
             <div class="image-container-review" id="slideshow2">
                 <img src="images/review1.png" alt="review1">
                 <img src="images/review2.png" alt="review2">
                 <img src="images/review3.png" alt="review3">
             </div>
-            <a class="prev" onclick="plusSlides(-1, 'slideshow2')">&#10094;</a>
-            <a class="next" onclick="plusSlides(1, 'slideshow2')">&#10095;</a>
+            <a class="prev2" onclick="plusSlides(-1, 'slideshow2')">&#10094;</a>
+            <a class="next2" onclick="plusSlides(1, 'slideshow2')">&#10095;</a>
+            <div class="dot-container" id="dot-container2"></div>
         </div>
-        <div class="dot-container" id="dot-container2"></div>
         </div>
     </div>
     </main>
