--- a/home.html
+++ b/home.html
@@ -69,15 +69,13 @@
         </section>
 
         <div class="home-container1">
-
         <section class="coming-soon">
             <div class="soon-content">
                 <h2>Coming Soon...</h2>
-                <p>Be the first to experience our latest additions! Our team is working tirelessly to bring you a range of innovative cars that will elevate your experience. From cutting-edge technology to stylish designs, we have something special in store for you. Keep an eye out for updates as we prepare to unveil these exciting new arrivals.</p>
+                <p>Be the first to experience our latest additions! Our team is working tirelessly to bring you a range of innovative cars that will elevate your experience. From cutting-edge technology to stylish designs, we have something special in store for you. Keep an eye out for updates as we prepare to unveil these exciting new arrivals. Our upcoming collection will feature enhanced performance capabilities, state-of-the-art safety features, and environmentally friendly options to meet the needs of modern drivers. <br><br> Whether you're looking for a high-speed thrill or a comfortable daily driver, our new models will offer something for every enthusiast. Join our community of passionate car lovers and stay informed about the latest trends, events, and exclusive offers. We are committed to pushing the boundaries of automotive excellence and can't wait to share these advancements with you.</p>
             </div>
         </section>
         
-
         <div class="slideshow-container1">
             <div class="image-container" id="slideshow1">
                 <img src="images/SupraMK5.jpg" alt="Toyota GR Supra GT4 [100 Edition] ">
@@ -94,7 +92,6 @@
         </div>
 
         <div class="home-container">
-
         <section class="reviews">
             <div class="review-content">
                 <h2>Reviews</h2>
