--- a/contact.html
+++ b/contact.html
@@ -49,9 +49,9 @@
             <h2>Send Us A Message</h2>
             <form>
                 <label for="name">Name * </label>
-                <input placeholder="Full Name" type="text" id="name" name="name" required><br><br>
+                <input placeholder="Enter your Full Name" type="text" id="name" name="name" required><br><br>
                 <label for="email">Email *</label>
-                <input placeholder="Eg. example@mail.com" type="email" id="email" name="email" required><br><br> 
+                <input placeholder="Enter your Email" type="email" id="email" name="email" required><br><br> 
                 <label for="name">Message *</label><br>
                 <textarea placeholder="Write Us A Message" id="message" name="message" rows="4" cols="50" required></textarea><br><br>
                 <button type="submit">Send Message</button>
